2017-04-05

        * Version 1.3.0 released
        =========================

        Add GCTAAeff::ebounds() method (#1989)
        Add GEbounds::emin() and GEbounds::emax() setter methods (#1989)
        Protect GEbounds::set_lin() and set_log() methods from invalid arguments (#1989)
        Copy shared Python libraries instead of creating a symbolic link (#1987)
        Added FITS image conversion operators (#1986)
        If code originates from Git, always compile the Python bindings (#1985)
        Raise exception instead of exiting with return code in Python tests (#1983)
        Enhance precision of GCTAEdisp2D::compute_ebounds_src
        Add conversion methods between GEbounds and GEnergies (#1977)
        Add GModelSpectralSmoothBrokenPlaw class (#1948)
        Implement lazy loading of energy dispersion in GCTAEdisp2D (#1940)
        Add GCTARoi::contains method
        Do no longer interpret a CTA calibration database as file path (#1969)
        Add GCTAResponseIrf::rspname() method
        Do no longer interpret a CTA calibration database as file path (#1969)
        GWcs now supports CD keywords instead of CDELT (#1951)
        Correct GCTAPsf2D containment radius computation (#1876)
        Add GLS and SFL WCS projections (#1851)
        GModelSpectralNodes throws exception for non-positive energy or intensity (#990)


2017-02-24

        * Version 1.2.0 released
        =========================

        Add GModelSpatialRadialProfile and GModelSpatialRadialProfileGauss classes (#1520)
        Make GFilename::is_fits thread safe (#1717).
        Improve exception message in GModelSpatialDiffuseCube::mc (#1915)
        Use $GAMMALIB instead of prefix in setup script (#1929)
        Reduce length of LAT response filenames by unzipping a number of energy dispersion files (#1931)
        Skip zero livetime observations in stacked cubes for CTA (#1920)
        Correct handling of time references in GGti::extend() method (#1922)