@@ -1,7 +1,7 @@
 /***************************************************************************
  *     GModelSpatialPointSource.hpp - Spatial point source model class     *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2016 by Domenico Tiziani                                 *
+ *  copyright (C) 2016-2017 by Domenico Tiziani                            *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -81,10 +81,7 @@ public:
     int                  components(void) const;
     void                 append(const GModelSpatial& component,
                                 const std::string&   name = "",
-                                const double&        scale = 1.0,
-                                const bool&          freeScale = false,
-                                const double&        minScale = 1.e-10,
-                                const double&        maxScale = 1.e13);
+                                const GModelPar&     par = GModelPar("", 1.0));
     const GModelSpatial* component(const int& index) const;
     const GModelSpatial* component(const std::string& name) const;
     double               scale(const int& index) const;
@@ -102,7 +99,7 @@ protected:
     std::string                 m_type;       //!< Model type
     std::vector<GModelSpatial*> m_components; //!< Components
     std::vector<std::string>    m_names;      //!< Component names
-    std::vector<GModelPar*>     m_scales_fit; //!< scales to be fitted
+    std::vector<GModelPar*>     m_scales;     //!< Component scales
     mutable GSkyRegionCircle    m_region;     //!< Bounding circle
 };
 
